# poc-desktop-app-angular-springboot

./: .gitignore  Dockerfile.windows  LICENSE  README.md  app.config.json  build-all.bat  build-app.bat  build-tauri.bat  build.gradle  settings.gradle  sync-config.js
.github/workflows/: build.yml
backend/main/java/sample/app/desktop/: DesktopApplication.java
backend/main/resources/: application-dev.properties  application.properties  logback-spring.xml
backend/test/java/sample/app/desktop/: DesktopApplicationTests.java
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: api.service.ts  app.css  app.html  app.routes.ts  app.ts
frontend/src/app/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/services/: config.service.ts
frontend/src/app/splash/: splash.component.css  splash.component.html  splash.component.ts
frontend/src/app/titlebar/: titlebar.component.css  titlebar.component.html  titlebar.component.ts
frontend/src/environments/: environment.development.ts  environment.ts
launcher/: Cargo.toml  bun.lockb  package.json  tauri.conf.json  tsconfig.json
launcher/capabilities/: default.json
launcher/icons/: icon.icns
launcher/scripts/: build.ts  patch-windows-exe.ts
launcher/src/: main.rs  main.ts
scripts/: compress-backend.js  compute-backend-hash.js  sync-config.js
src-tauri/: Cargo.toml  tauri.conf.json
src/main/java/sample/app/desktop/: DesktopApplication.java
src/main/resources/: application-dev.properties  application.properties
src/main/resources/static/: loading.html
src/test/java/sample/app/desktop/: DesktopApplicationTests.java
(+12 files in other folders)
