[package]
name = "desktop-app"
version = "1.0.0"
description = "Desktop application with Spring Boot backend"
authors = ["Shawiizz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
